Alignment and space fixes

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -69,6 +69,8 @@ img {
 .insideOverlay{
 	textarea {
         padding: 12px;
+		height: 30vh;
+		width: 90vw;
     }
 
     a {
